Eignen values corrected

--- a/Diabetes PCA and Classification.ipynb
+++ b/Diabetes PCA and Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9aa4e427",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c1e12f54",
    "metadata": {},
    "outputs": [],
@@ -30,24 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2ab4b301",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kdot3\\Downloads\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd Downloads/\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "0c1dcade",
    "metadata": {},
    "outputs": [],
@@ -57,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "55058501",
    "metadata": {},
    "outputs": [
@@ -261,7 +243,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8fc1008a",
    "metadata": {},
    "outputs": [
@@ -282,7 +264,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -304,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "93e1f0c2",
    "metadata": {},
    "outputs": [],
@@ -314,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "167a2dfc",
    "metadata": {},
    "outputs": [
@@ -518,7 +500,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d992afe5",
    "metadata": {
     "scrolled": true
@@ -538,10 +520,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1334da2e850>"
+       "<seaborn.axisgrid.PairGrid at 0x17dc8f21690>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -563,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7362eb3d",
    "metadata": {},
    "outputs": [
@@ -595,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "bb1881da",
    "metadata": {},
    "outputs": [
@@ -625,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d7187f33",
    "metadata": {},
    "outputs": [
@@ -635,7 +617,7 @@
        "(639, 9)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "65218d72",
    "metadata": {},
    "outputs": [
@@ -679,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "ea5444ef",
    "metadata": {},
    "outputs": [
@@ -709,7 +691,7 @@
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
     "# Apply PCA\n",
-    "pca = PCA(n_components=6)  \n",
+    "pca = PCA(n_components=5)  \n",
     "X_pca = pca.fit_transform(X_scaled)\n",
     "\n",
     "# Visualize the results (optional)\n",
@@ -724,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "16026539",
    "metadata": {},
    "outputs": [
@@ -733,26 +715,26 @@
      "output_type": "stream",
      "text": [
       "Eigenvalues:\n",
-      "[6.45025786e+03 8.24189153e+02 1.86502308e+02 1.44547923e+02\n",
-      " 7.90847893e+01 2.91191004e+01 6.95636028e+00 5.92448659e-02]\n",
+      "[2.03258606 1.9036519  0.3921866  0.37596843 0.58664364 0.82693524\n",
+      " 0.98538979 0.90917752]\n",
       "\n",
       "Eigenvectors:\n",
-      "[[-4.46394786e-03  2.49456990e-02 -1.37886698e-02 -1.14095160e-01\n",
-      "  -1.29724610e-01  8.77279943e-03  9.84502038e-01 -5.03276271e-04]\n",
-      " [ 1.01643741e-01  9.71029391e-01 -2.36969720e-02  2.12492605e-01\n",
-      "   8.16157579e-03 -3.14154258e-02  1.50610327e-03  9.85731503e-05]\n",
-      " [-4.53161765e-03  1.25198581e-01 -3.24082905e-01 -6.58589696e-01\n",
-      "   6.40270750e-01 -1.88637051e-01  1.99081863e-03  3.59633596e-04]\n",
-      " [ 9.49139057e-02 -9.58344478e-02 -9.09488778e-01  2.72103895e-01\n",
-      "  -2.15473813e-01 -1.84774744e-01 -5.09091584e-03 -3.92661880e-04]\n",
-      " [ 9.90068121e-01 -8.86488215e-02  9.13846903e-02 -5.80766382e-02\n",
-      "   1.22727256e-02  4.82665587e-03  2.85856197e-03 -5.96950283e-04]\n",
-      " [ 1.60380196e-02  3.35868832e-02 -2.37564548e-01 -4.92564037e-02\n",
-      "   1.06521888e-01  9.63519222e-01 -4.36581747e-03 -4.04117638e-03]\n",
-      " [ 6.69906557e-04  8.48289411e-05 -1.20369874e-03 -6.98448593e-04\n",
-      "  -7.43933675e-04  3.93106813e-03  2.81224350e-04  9.99990761e-01]\n",
-      " [-1.12643833e-02  1.50446033e-01 -4.75314009e-02 -6.54407131e-01\n",
-      "  -7.17796093e-01  2.83271020e-02 -1.75203531e-01 -1.11558658e-03]]\n"
+      "[[-0.39995614 -0.34750927 -0.57653911  0.1302728  -0.17064493  0.49178238\n",
+      "  -0.19052175  0.25027167]\n",
+      " [-0.41773922  0.03576943 -0.19126018 -0.33664967 -0.26748373 -0.29174941\n",
+      "  -0.24284809 -0.67724484]\n",
+      " [-0.45783323 -0.09562186 -0.22052987  0.06081884  0.63823609 -0.33768946\n",
+      "   0.45379243  0.04007237]\n",
+      " [-0.15735206  0.55221029 -0.02050443 -0.64079846  0.13208621  0.43921643\n",
+      "   0.16122914  0.15135503]\n",
+      " [-0.17272485  0.51997324  0.05490869  0.58097646  0.31153554  0.26212455\n",
+      "  -0.3336653  -0.2866167 ]\n",
+      " [-0.37194628  0.32487847  0.13435671  0.32022232 -0.60923502 -0.11686722\n",
+      "   0.47029693  0.17178888]\n",
+      " [-0.16635815  0.25100487 -0.044643   -0.08425901  0.00884283 -0.49797035\n",
+      "  -0.55975575  0.58210805]\n",
+      " [-0.48508261 -0.35349182  0.74760194 -0.09054738  0.07899871  0.18906464\n",
+      "  -0.16421214  0.06065507]]\n"
      ]
     }
    ],
@@ -760,7 +742,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "data = X\n",
+    "data = X_scaled\n",
     "covariance_matrix = np.cov(data, rowvar=False)\n",
     "\n",
     "import numpy as np\n",
@@ -773,67 +755,6 @@
     "print(eigenvalues)\n",
     "print(\"\\nEigenvectors:\")\n",
     "print(eigenvectors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "552f67a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eigenvalues Matrix:\n",
-      "[[6.45025786e+03 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 8.24189153e+02 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 1.86502308e+02 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 1.44547923e+02\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  7.90847893e+01 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 2.91191004e+01 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00 6.95636028e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 5.92448659e-02]]\n",
-      "\n",
-      "Eigenvectors Matrix:\n",
-      "[[-4.46394786e-03  2.49456990e-02 -1.37886698e-02 -1.14095160e-01\n",
-      "  -1.29724610e-01  8.77279943e-03  9.84502038e-01 -5.03276271e-04]\n",
-      " [ 1.01643741e-01  9.71029391e-01 -2.36969720e-02  2.12492605e-01\n",
-      "   8.16157579e-03 -3.14154258e-02  1.50610327e-03  9.85731503e-05]\n",
-      " [-4.53161765e-03  1.25198581e-01 -3.24082905e-01 -6.58589696e-01\n",
-      "   6.40270750e-01 -1.88637051e-01  1.99081863e-03  3.59633596e-04]\n",
-      " [ 9.49139057e-02 -9.58344478e-02 -9.09488778e-01  2.72103895e-01\n",
-      "  -2.15473813e-01 -1.84774744e-01 -5.09091584e-03 -3.92661880e-04]\n",
-      " [ 9.90068121e-01 -8.86488215e-02  9.13846903e-02 -5.80766382e-02\n",
-      "   1.22727256e-02  4.82665587e-03  2.85856197e-03 -5.96950283e-04]\n",
-      " [ 1.60380196e-02  3.35868832e-02 -2.37564548e-01 -4.92564037e-02\n",
-      "   1.06521888e-01  9.63519222e-01 -4.36581747e-03 -4.04117638e-03]\n",
-      " [ 6.69906557e-04  8.48289411e-05 -1.20369874e-03 -6.98448593e-04\n",
-      "  -7.43933675e-04  3.93106813e-03  2.81224350e-04  9.99990761e-01]\n",
-      " [-1.12643833e-02  1.50446033e-01 -4.75314009e-02 -6.54407131e-01\n",
-      "  -7.17796093e-01  2.83271020e-02 -1.75203531e-01 -1.11558658e-03]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "eigenvalues_matrix = np.diag(eigenvalues)\n",
-    "\n",
-    "# Create a matrix of eigenvectors\n",
-    "eigenvectors_matrix = eigenvectors\n",
-    "\n",
-    "# Print eigenvalues and eigenvectors matrices\n",
-    "print(\"Eigenvalues Matrix:\")\n",
-    "print(eigenvalues_matrix)\n",
-    "print(\"\\nEigenvectors Matrix:\")\n",
-    "print(eigenvectors_matrix)"
    ]
   },
   {
@@ -1054,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "f70a1ea7",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "111bfdc4",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "id": "61e67dc4",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1086,7 @@
        "       [-1.43456623,  0.34445621, -0.96469836,  0.36356455,  0.07306126]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "id": "bc6e94d6",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "id": "25d187bc",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "id": "f133b6a6",
    "metadata": {},
    "outputs": [
@@ -1286,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "id": "d8f88cd6",
    "metadata": {},
    "outputs": [
@@ -1336,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "id": "ab8ded84",
    "metadata": {},
    "outputs": [
@@ -1366,6 +1287,30 @@
     "plt.ylabel(\"True Class\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0f4df66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6f28426",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43658885",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
